--- a/rime/installation_exmpler.yaml
+++ b/rime/installation_exmpler.yaml
@@ -1,2 +1,3 @@
 installation_id: "XXX"
 sync_dir: '/private/var/mobile/Library/Mobile Documents/iCloud~dev~fuxiao~app~hamsterapp/Documents/sync'
+# sync_dir: 'D:/\OneDrive/\应用/\rimesync'
