--- a/sub-store/xjh.conf
+++ b/sub-store/xjh.conf
@@ -31,7 +31,7 @@ https://gh-proxy.allinhub.top/https://raw.githubusercontent.com/RuCu6/QuanX/main
 
 [server_local]
 [filter_local]
-IP-CIDR,0.0.0.0/32,REJECT,no-resolve
+host-suffix, allinhub.top, proxy
 final, direct
 
 [rewrite_local]
