--- a/rime/rime-ice/default.custom.yaml
+++ b/rime/rime-ice/default.custom.yaml
@@ -7,5 +7,5 @@ patch:
   # 菜单
   menu/page_size: 7                                # 候选词个数
   # 中西文切换
-  ascii_composer/switch_key/Shift_L: noop          # 左shift屏蔽快捷键，不切换中英
+  # ascii_composer/switch_key/Shift_L: noop          # 左shift屏蔽快捷键，不切换中英
   ascii_composer/switch_key/Shift_R: commit_code   # 右shift上屏原始的编码，然后切换到英文
